--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -13,7 +13,7 @@
         "-p",
         "test_*.py"
     ],
-    "cucumberautocomplete.steps": ["features/steps/*.py"],
+//    "cucumberautocomplete.steps": ["features/steps/*.py"],
     "cucumberautocomplete.syncfeatures": "features/*.feature",
     "cucumberautocomplete.strictGherkinCompletion": true,
     "cucumberautocomplete.strictGherkinValidation": true,
@@ -27,6 +27,16 @@
         "**/.DS_Store": true,
         "**/*.pyc": true,
         "**/__pycache__": true
-    }
+    },
+    "cSpell.words": [
+        "codecov",
+        "healthcheck",
+        "jsonify",
+        "Millenial",
+        "nosetests",
+        "sqlalchemy",
+        "testdb",
+        "werkzeug"
+    ]
 }
 
